{
    "name": "Controls",
    "maps": [
        {
            "name": "PlayerMovable",
            "id": "e39eb2ea-844d-4c20-8c84-97eb4831a0a4",
            "actions": [
                {
                    "name": "Joystick",
                    "type": "Value",
                    "id": "c8331030-b478-4329-b087-c4bce8d02b61",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone(min=0.02,max=1)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftButton",
                    "type": "Button",
                    "id": "fc91e788-e5eb-4b6c-a8dd-c46f45f2e830",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScreenPosition",
                    "type": "Value",
                    "id": "486cc4a7-9ee8-4279-a34e-f0a0e33dde91",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d7162890-6b87-4508-9caf-7c3e3f224190",
                    "path": "<AndroidJoystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "600640de-a591-4333-887f-b5c648069939",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efeb2749-889a-4f05-ac29-d2f8f28c4961",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b2f1a68-c4b0-4fc6-b91b-d720290fc7af",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a165a9c4-0003-4926-aec8-a55cf45af4ca",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}